getting the books for booklist in tastypie

--- a/books/templates/booklist.html
+++ b/books/templates/booklist.html
@@ -6,389 +6,6 @@
   
   <!-- books row -->
   <div class="row">
-    <div id="booklist" data-booklist-id="1">
-      <!-- item 1 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-
-      <!-- item 2 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Bekanie na zawołanie</h5>
-                  <h6>Dorota Rabczewska</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>
-
-      <!-- item 3 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Dupa mnie boli - katalog dolegliwości gastrycznych</h5>
-                  <h6>Paweł Miłobędzki</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-
-      </div>
-
-      <!-- item 4 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Jebie mnie to. Pamiętnik życia buca</h5>
-                  <h6>Paweł Miłobędzki</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-
-      </div>
-
-      <!-- item 5 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-
-      <!-- item 6 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>
-      
-      <!-- item 7 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-
-      <!-- item 8 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Bekanie na zawołanie</h5>
-                  <h6>Dorota Rabczewska</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>
-
-      <!-- item 9 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Dupa mnie boli - katalog dolegliwości gastrycznych</h5>
-                  <h6>Paweł Miłobędzki</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-
-      </div>
-
-      <!-- item 10 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Jebie mnie to. Pamiętnik życia buca</h5>
-                  <h6>Paweł Miłobędzki</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-
-      </div>
-
-      <!-- item 11 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-
-      <!-- item 12 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-      <!-- item 13 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-
-      <!-- item 14 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Bekanie na zawołanie</h5>
-                  <h6>Dorota Rabczewska</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>
-
-      <!-- item 15 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" width="48" height="60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Dupa mnie boli - katalog dolegliwości gastrycznych</h5>
-                  <h6>Paweł Miłobędzki</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-
-      </div>
-
-      <!-- item 16 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Jebie mnie to. Pamiętnik życia buca</h5>
-                  <h6>Paweł Miłobędzki</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-
-      </div>
-
-      <!-- item 17 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>      
-
-      <!-- item 18 -->
-      <div class="booklist-item">       
-              <!-- booklet container -->
-              <div class="booklet-image thumbnail">
-                <img src="http://placehold.it/48x60" alt="Booklet">
-              </div>
-              
-              <!-- data container -->
-              <div class="data-container">
-                  <h5>Płukanie gardła i inne historie</h5>
-                  <h6>Stefan Prykalski</h6>
-              </div>
-              
-              <!-- toolkit container -->
-              <div class="toolkit-container">
-                <div class="icon"><i class="icon-chevron-right"></i></div>
-                <div class="icon"><i class="icon-pencil"></i></div>
-                <div class="icon"><i class="icon-trash"></i></div>
-              </div>
-      </div>
-    </div>
+    <div id="booklist"></div>
     </div>
 </div>
