--- a/ook/hogan/navbar_booklist.mustache
+++ b/ook/hogan/navbar_booklist.mustache
@@ -1,3 +1,3 @@
 {{#booklists}}
-<li class="navbar-booklist" data-booklist-id="{{ id }}"><a href="#">{{ name }}</a></li>
+<li class="navbar-booklist" data-booklist-id="{{ id }}" data-booklist-name="{{ name }}"><a href="#">{{ name }}</a></li>
 {{/booklists}}
