--- a/books/templates/add_book_modal.html
+++ b/books/templates/add_book_modal.html
@@ -15,7 +15,7 @@
                 <div class="control-group">
                     <label class="control-label">Title</label>
                     <div class="controls">
-                        <input type="text" name="book_title">
+                        <input type="text" name="title">
                         <p class="help-block"></p>
                     </div>
                 </div>
@@ -23,7 +23,7 @@
                 <div class="control-group">
                     <label class="control-label">Author</label>
                     <div class="controls">
-                        <input type="text" name="book_author">
+                        <input type="text" name="author">
                         <p class="help-block"></p>
                     </div>
                 </div>
@@ -31,7 +31,7 @@
                 <div class="control-group">
                     <label class="control-label">ISBN</label>
                     <div class="controls">
-                        <input type="text" name="book_isbn">
+                        <input type="text" name="isbn">
                         <p class="help-block"></p>
                     </div>
                 </div>
