create the confirmation modal, implement deleting books

--- a/ook/hogan/booklist_item.mustache
+++ b/ook/hogan/booklist_item.mustache
@@ -13,9 +13,9 @@
           
     <!-- toolkit container -->
     <div class="toolkit-container">
-        <div class="icon"><i class="icon-chevron-right"></i></div>
-        <div class="icon"><i class="icon-pencil"></i></div>
-        <div class="icon"><i class="icon-trash"></i></div>
+        <div class="look icon"><a href="#"><i class="icon-chevron-right"></i></a></div>
+        <div class="edit icon"><a href="#"><i class="icon-pencil"></i></a></div>
+        <div class="remove icon"><a href="#"><i class="icon-trash"></i></a></div>
     </div>
 </div>      
 {{/booklist-items}}
