--- a/ook/less/ook.less
+++ b/ook/less/ook.less
@@ -14,6 +14,17 @@ body { padding-top:50px; }
 }
 
 /*
+ * Modals
+ */
+#confirmation-modal {
+    
+}
+
+#confirmation-modal > .modal-body > p > span.title {
+    font-weight: 800;
+}
+
+/*
 * Bookist items
 */
 #booklist-view .navbar .nav > li > a {
