initializing require.js fiddling

--- a/ook/templates/home_base.html
+++ b/ook/templates/home_base.html
@@ -27,15 +27,6 @@
       <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster (libraries) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="{{ MEDIA_URL }}/js/jquery.cookie.js"></script>
-    <script src="{{ MEDIA_URL }}/js/json2.js"></script>
-    <script src="{{ MEDIA_URL }}/js/bootstrap.min.js"></script>
-    <script src="{{ MEDIA_URL }}/js/hogan-2.0.0.js"></script>
-    <script src="{{ MEDIA_URL }}/js/sprintf.js"></script>
-    
-    <!-- Application js -->
-    <script src="{{ MEDIA_URL }}/js/templates.js"></script>
-    <script src="{{ MEDIA_URL }}/js/ook.js"></script>
+    <script data-main="{{ MEDIA_URL }}/js/main" src="{{ MEDIA_URL }}/js/lib/require/require.js"></script>
 </body>
 </html>
