--- a/ook/templates/home_navbar.html
+++ b/ook/templates/home_navbar.html
@@ -1,5 +1,5 @@
 <!-- navbar -->
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top" id="navbar-view">
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -20,11 +20,15 @@
             <a href="#" class="dropdown-toggle">Books<b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li class="nav-header">Booklists</li>
-                {% autoescape off %} {{ booklists_html }} {% endautoescape %}
+                {% for booklist in booklists %}
+                  <li class="navbar-booklist">
+                    <a href="#booklist/{{ booklist.id }}"> {{ booklist.name }}</a>
+                  </li>
+                {% endfor %}
                 <li class="divider"></li>
                 <li class="nav-header">Booklists tools</li>
                 <li><a href="#add-booklist-modal" data-toggle="modal"><i class="icon-plus"></i>New list...</a></li>
-                <li><a href="#"><i class="icon-pencil"></i>Edit lists</a></li>
+                <li><a href="#editBooklists"><i class="icon-pencil"></i>Edit lists</a></li>
             </ul>
           </li>
           
