--- a/books/templates/booklist.html
+++ b/books/templates/booklist.html
@@ -1,6 +1,4 @@
-{% include "add_book_modal.html" %}
-
-<div class="container main-view hide" id="booklist-view" >
+<div id="booklist-view" class="container main-view hide" >
   {% include "booklist_menu.html" %}
   {% include "booklist_pagination.html" %}
   
