--- a/books/templates/booklist_pagination.html
+++ b/books/templates/booklist_pagination.html
@@ -1,7 +1,7 @@
 <!-- pagination -->
 <div class="pagination pagination-centered">
   <ul>
-    <li class="pagination-nav prev"><a href="#">«</a></li>
-    <li class="pagination-nav next"><a href="#">»</a></li>
+    <li class="pagination-nav prev">«</li>
+    <li class="pagination-nav next">»</li>
   </ul>
 </div>
