cleaning up the add book modal

--- a/books/templates/booklist.html
+++ b/books/templates/booklist.html
@@ -4,6 +4,10 @@
   
   <!-- books row -->
   <div class="row">
-    <div id="booklist"></div>
+    <div id="booklist">
+      <div id="empty-booklist-message" class="span4 offset4">
+        You have no books added to this list yet.
+      </div>
     </div>
+  </div>
 </div>
