change the logo to the one with optimus princeps.

--- a/profiles/templates/profiles_base.html
+++ b/profiles/templates/profiles_base.html
@@ -12,9 +12,9 @@
 
   <div class="container">
     <div class="well hero-unit">
-      <h1>Ook</h1>
+      <h1 id="title">Ook</h1>
 
-      <p>track your books.</p>
+      <p>track your books. share your passion. everywhere.</p>
     </div>
 
     {% block content %}{% endblock %}
